--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -129,7 +129,7 @@
   "config_autorole_success": "{{emote_success}} Successfully changed the autorole to **{{role}}**",
   "config_autorole_disable": "{{emote_success}} Successfully disabled the autorole",
 
-  "override_clearance_less_than_0": "{{emote_warn}} Clearance level cannot be less than or equal to **0**",
+  "override_clearance_less_than_0": "{{emote_warn}} Clearance level cannot be less than **0**",
   "override_clearance_more_than_100": "{{emote_warn}} Clearance level cannot be higher than **100**",
   "override_clearance_higher_than_self": "{{emote_warn}} You cannot create an override with clearance level higher than your clearance level.",
 
