Missing perms message for configure override edit buttons

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -139,7 +139,7 @@
   "override_nonexistent_command": "{{emote_fail}} No command override with the name of `{{command}}` was found! You need to create an override first in order to edit it.",
   "override_nonexistent_role": "{{emote_fail}} No role override for the `{{role}}` Role was found. You need to create an override first in order to edit it.",
 
-  "override_create_success": "{{emote_success}} Successfully crated an override with clearance level of `{{clearance}}`",
+  "override_create_success": "{{emote_success}} Successfully created an override with clearance level of `{{clearance}}`",
   "override_already_exists": "{{emote_fail}} An override with that name already exists!\n{{emote_wrench}} **Tip:** If you're trying to edit an override use `!configure override edit <part> <name> <clearance>`",
 
   "override_disable_success": "{{emote_success}} Successfully disabled command `{{command}}`",
